# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  secrets.env
page_analyzer/: app.py
page_analyzer/templates/: footer.html  header.html  index.html  layout.html
