[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
]

